api-gateway/cs/k8s/manifests/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-gateway
  labels:
    istio-injection: enabled # Add a namespace label to instruct Istio to automatically inject Envoy sidecar proxies when you deploy your application
