api-gateway/cs/k8s/manifests/11-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: api-gateway-peer-authentication
  namespace: api-gateway
spec:
  mtls:
    mode: STRICT
