api-gateway/cs/k8s/manifests/7-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: api-gateway-server
  name: api-gateway
  namespace: api-gateway
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/app: api-gateway
