api-gateway/cs/k8s/manifests/10-gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: proxy-gateway
  namespace: api-gateway
spec:
  selector:
    # kubectl get pods -n istio-ingress --show-labels
    # Search istio=gateway use this label for selector
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "app.service.api"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
      - "app.service.api"
      tls:
        mode: SIMPLE # enables HTTPS on this port
        credentialName: gateway-tls-secret # fetches certs from Kubernetes secret
      # tls:
      #   mode: SIMPLE # enables HTTPS on this port
      #   serverCertificate: /etc/certs/servercert.pem
      #   privateKey: /etc/certs/privatekey.pem
