api-gateway/cs/k8s/manifests/9-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-gateway-route
  namespace: api-gateway
spec:
  hosts:
  - app.service.api # DNS for external access
  gateways:
    - api-gateway/api-gateway # The name of gateway
  http:
  - name: "api-gateway-route"
    match:
    - uri:
        prefix: /
    timeout: 5s # 5 second timeout for requesting
    route:
    - destination:
        host: api-gateway.api-gateway.svc.cluster.local
        port:
          number: 3000
